# jupyter-playland

./: Dockerfile  Makefile  README.md  docker-compose.dev.yml
docker-env/: jupyter_lab_config.py
src/: .gitignore  pyproject.toml  template.ipynb
src/utils/: utils.py
