[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
jupyterlab = "^3.2.5"
TA-Lib = "^0.4.23"
numpy = "^1.22.0"
pandas = "^1.3.5"
python-dotenv = "^0.19.2"
python-binance = "^1.0.15"
nest-asyncio = "^1.5.4"
Backtesting = "^0.3.3"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
scipy = "^1.7.3"
mplfinance = "^0.12.8-beta.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
