[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyterlab = "^3.2.5"
numpy = "^1.22.0"
pandas = "^1.3.5"
python-dotenv = "^0.19.2"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
